--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --first-color: #4985a5;
+  --second-color: #ffffffc9;
+  --white-color: rgb(248, 243, 243);
+  --black-color: #0f0f0f;
+  --black-grey-color: #444649;
+  --grey-color: #8491A0;
+  --grey-dark-color: #252934;
+  --grey-light-color: #F5F5F5;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+section, footer {
+  overflow: hidden;
+  white-space: wrap;
+  word-break: break-word;
+}
+
+body {
+  margin: 0;
+  background-color: var(--white-color);
+  min-height: 100vh;
+}
+
+footer {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  text-align: center;
+}
