--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,11 @@ section, footer {
   word-break: break-word;
 }
 
+nav {
+  margin-bottom: 4rem;
+}
+
+
 body {
   margin: 0;
   background-color: var(--white-color);
