Added service and component of scored chapters

--- a/src/app/components/suggest-chapter/suggest-chapter.component.html
+++ b/src/app/components/suggest-chapter/suggest-chapter.component.html
@@ -1,1 +1,15 @@
-<h3>suggest-chapter</h3>
+<h3>Add suggestions of chapters</h3>
+<div class="formSuggestions" id="formSuggestions">
+  <p>Chapters by John Swartzwelder will be remarked</p>
+  <form action="" id="entryForm" class="form-group entryForm">
+    <div id="input-container" class="form-group">
+      <input type="text" id="title" placeholder="Title" class="form-control">
+      <input type="number" id="season" placeholder="Season" class="form-control">
+      <input type="text" id="premiere" placeholder="Premiere" class="form-control">
+      <input type="text" id="screenwriter" placeholder="Screenwriter" class="form-control">
+      <input type="text" id="director" placeholder="Director" class="form-control">
+      <textarea id="gag" placeholder="Gag" class="form-control"></textarea>
+    </div>
+    <input type="submit" class="btn btn-primary" id="btn-suggestions" value="Submit">
+  </form>
+</div>
