--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
           <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/soloSeMudaDosVeces']">solo se muda dos veces</a>
+          <a class="nav-link" [routerLink]="['/chapter-2-season-8']">You Only Move Twice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/casitaDelHorrorVII']"> casita del horror VII</a>
+          <a class="nav-link" [routerLink]="['/chapter-4-season-9']">Tree house Of Horror VIIII</a>
         </li>
       </ul>
     </div>
