--- a/src/app/components/suggest-chapter/suggest-chapter.component.css
+++ b/src/app/components/suggest-chapter/suggest-chapter.component.css
@@ -2,6 +2,15 @@ input, textarea {
   margin-top: .4rem;
 }
 
+textarea {
+  margin-bottom: 1rem;
+}
+
 form {
   margin-bottom: 1.5rem;
+}
+
+.btn {
+  width: 100%;
+  height: 10%;
 }
